--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vôlei Masculino </title>
-    <link rel="stylesheet" href="background.css">
+    <link rel="stylesheet" href="Background.css">
     <link rel="shortcut icon" href="Luquinhas.jpg" type="image/x-icon">
 </head>
 
